deployment_scripts/local/deployment-catalog-local.yaml
# kubectl create namespace marketplace

apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketplace-catalog
#  namespace: marketplace
  labels:
    app:  marketplace-catalog
spec:
  selector:
    matchLabels:
      app: marketplace-catalog
      tier: backend
  replicas: 1
#  strategy:
#    rollingUpdate:
#      maxSurge: 25%
#      maxUnavailable: 25%
#    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  marketplace-catalog
        tier: backend
    spec:
      containers:
      - name:  marketplace-catalog
        image:  k3d-test-registry:5050/fri-rso-marketplace-catalog:v1.1.4
        imagePullPolicy: Always
        ports:
          - name:  server
            containerPort:  8801
        livenessProbe:
          httpGet:
            path: /health/live
            port: server
          initialDelaySeconds: 10
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health/ready
            port: server
          initialDelaySeconds: 15
          timeoutSeconds: 4
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
      restartPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: marketplace-catalog
#  namespace: marketplace
spec:
  selector:
    app: marketplace-catalog
    #tier: backend
  ports:
    - protocol: TCP
      port: 8801
      targetPort: server





#
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: marketplace-catalog
#  annotations:
#    ingress.kubernetes.io/ssl-redirect: "false"
#spec:
#  rules:
#    - host: localhost
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: marketplace-catalog
#                port:
#                  number: 8801
#

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketplace-catalog
#  namespace: marketplace
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: "catalog.marketplace.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marketplace-catalog
                port:
                  number: 8801

#     - http:
#        paths:
#          - path: /catalogue/(.*)
##          - path: /
##            pathType: Prefix
#            pathType: ImplementationSpecific
#            backend:
#              service:
#                name: marketplace-catalog
#                port:
#                  number: 8801
#
#
