deployment_scripts/local/deployment-loader-agent-local.yaml
# kubectl create namespace marketplace

# TODO: Move to other repo.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketplace-loader-agent
#  namespace: marketplace
  labels:
    app:  marketplace-loader-agent
spec:
  selector:
    matchLabels:
      app: marketplace-loader-agent
      tier: backend
  replicas: 1
#  strategy:
#    rollingUpdate:
#      maxSurge: 25%
#      maxUnavailable: 25%
#    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  marketplace-loader-agent
        tier: backend
    spec:
      containers:
      - name:  marketplace-loader-agent
        image:  k3d-test-registry:5050/marketplace-loader-agent:v1.0.0-3
        imagePullPolicy: Always
        ports:
          - name:  server
            containerPort:  8802
        livenessProbe:
          httpGet:
            path: /health/live
            port: server
          initialDelaySeconds: 5
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health/ready
            port: server
          initialDelaySeconds: 8
          timeoutSeconds: 4
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
      restartPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: marketplace-loader-agent
#  namespace: marketplace
spec:
  selector:
    app: marketplace-loader-agent
    #tier: backend
  ports:
    - protocol: TCP
      port: 8802
      targetPort: server

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketplace-loader-agent
#  namespace: marketplace
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: "loader-agent.marketplace.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marketplace-loader-agent
                port:
                  number: 8802
